style.css
:root{
    --x-font-color: red;
    --o-font-color:blue;
}

body{
    display:flex;
    align-items: center;
    justify-content:space-around;
    flex-direction:column;
    font-family: Arial, Helvetica, sans-serif;
    position:relative;
}

/* button{
    margin:10px;
} */

/* .newgamebutton{
    margin:10px;
} */

button{
    height:40px;
}

.header {
    /* background-color:rgb(223, 223, 244); */
    padding:10px;
}

.newgamebtndiv {
    background-color:rgb(228, 196, 228);
}

.playerchoicearea {
    background-color:pink;
    display:none;
    /* justify-content:space-between; */
}

#playerlist {
    background-color:rgb(209, 55, 81);
    display:none;
    width:300px;
    justify-content:space-around;
}

.playernamearea {
    display:flex;
    flex-direction:row;
    justify-content:center;
    align-items:center;
}

.playerlabel {
    font-weight:bold;
}

.player1display, .player2display{
    padding:10px;
}


/* One Player Form */

#oneplayerformcontainer {
    /* background-color:turquoise; */
    display:none;
}

#oneplayerform {
    display:grid;
    grid-template-columns:1fr 1fr;
    grid-template-rows:fit-content(100%) auto;
    padding:25px;
    justify-items:center;
    gap:10px;
}



/* two player form */

#twoplayerformcontainer {
    /* background-color:yellow; */
    display:none;
}

#twoplayerform {
    display:grid;
    grid-template-columns:1fr 1fr;
    grid-template-rows:1fr 1fr;
    padding:25px;
    gap:10px;
    justify-items:center;
    background-color:palevioletred;
}

/* general form stuff */

.playernameinput{
    margin-top:10px;
}

fieldset{
    border:0;
}

.startbutton{
    grid-area: 2 / 1 / 3 / 3;
    width:20ch;
    height:3em;
    padding:10px 10px 10px 10px;
    display:flex;
    align-items: center;
    justify-content: center;
    align-self: end;
}

/* Game area */

.clicked {
    border: 2px solid red;
}

.radiobuttoncontainer {
    text-align: left;
}

.gameboardcontainer {
    display:grid;
    width:400px;
    height:400px;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
    background-color: lightgray;
    border-color:black;
    z-index:4;
}

.cell{
    display:flex;
    align-items: center;
    justify-content: center;
    border:1px solid black;
    font-size: 70px;
    z-index:5;
}

.gameboardcontainer-active {
    background-color: rgba(232, 212, 212,0.5);
}

.gameboardcontainer-active .cell:hover{
    background-color:rgba(115, 245, 245, 0.5);
}

.gameboardcontainer-active .cell:active{
    background-color:rgba(115, 245, 245, 0.9);
}


#whoseturn{
    font-size:20px;
    text-align:center;
    background-color: aqua;
    display:flex;
    align-items: center;
}

.X-style {
    color: blue;
}

.O-style {
    color: red;
}


/* .gameboardcontainer-active .X-style:hover {
    background-color:pink;
}

.gameboardcontainer-active .O-style:hover {
    background-color:green;
} */




.resetarea{
    display:flex;
    align-content:center;
    justify-content:center;
}


/* I would like the hover highlight to be different eventually depending on the player
 .playeroneshighlight{
    color:red;
}

.playertwohighlight{
    color:blue;
} */

button{
    background-color: rgb(203, 157, 247);
    border-style:none;
    padding:10px 20px 10px 20px;
    margin-left:10px;
    margin-right:10px;
}

.strip {
    box-sizing: border-box;
    height:40px;
    margin-top:10px;
    margin-bottom:10px;
}

.formcontainer {
    position:absolute;
    z-index:50;
    box-shadow: 6px 5px 5px rgba(0, 0, 0, 0.467);
    top:25%;
}

